# pykit

./: .gitignore  README.md  main.py  pyproject.toml  string_utils.py  utils.py
.github/workflows/: pypi-publish.yml
fastfingertips/: bs4_utils.py  concurrency_utils.py  terminal_utils.py
models/: book.py
pykit/: datetime_utils.py  string_utils.py  url_utils.py
src/web-scraping-books/: README.md  config.py
src/web-scraping-books/utils/: data_extractors.py  web_utils.py
utils/: data_extractors.py  file_utils.py  image_utils.py  timing_utils.py  web_utils.py
