[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pykit"
version = "0.1.0"
description = "Personal Python utility library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[tool.setuptools]
# Buraya paketinin icindeki dosya isimlerini (uzantisiz) yazman gerekiyor
py-modules = ["string_utils"]
